--- a/Proj-1/code/.vscode/settings.json
+++ b/Proj-1/code/.vscode/settings.json
@@ -7,6 +7,7 @@
         "types.h": "c",
         "stdlib.h": "c",
         "link_layer.h": "c",
-        "application_layer.h": "c"
+        "application_layer.h": "c",
+        "termios.h": "c"
     }
 }
